trying to fix nav-link color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -43,7 +43,14 @@ a {
 
 a.nav-link {
   text-decoration: none;
-  color: var(--accent1-color); 
+  color: var(--accent1-color);
+  background-color: var(--primary-color);
+  padding: 5px 10px;
+}
+
+a.nav-link:hover {
+  background-color: var(--secondary-color);
+  color: #FFFFFF;
 }
 
 .header-container {
